[gd_scene load_steps=8 format=3 uid="uid://b63ecpfrllawj"]

[ext_resource type="Script" uid="uid://ympo46hlihht" path="res://gui/main_menu.gd" id="1_6uy4f"]
[ext_resource type="Texture2D" path="res://MoonCast/assets/wingedver.svg" id="1_t4b0w"]
[ext_resource type="Texture2D" uid="uid://cde8ktwu64r4x" path="res://gui/dream.png" id="2_bqp32"]
[ext_resource type="VideoStream" path="res://video/Splash.ogv" id="2_vkh7x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ee8e"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_gvsju"]
resource_name = "enter_menu"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/VBoxContainer/Emblem:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5000, 0), Vector2(250, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/VBoxContainer/Options:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer/VBoxContainer/Emblem:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BlackScreen:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(-0.1, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BlackScreen:top_level")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/2Dlevel")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"grab_focus"],
"method": &"call_deferred"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1dvj"]
_data = {
&"enter_menu": SubResource("Animation_gvsju")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6uy4f")
main_2D = "uid://bytxq44ex4la0"
test_2D = "uid://l6j7c0hm73c"
test_3D = "uid://cevdou1y8kc5k"

[node name="intro_video" type="VideoStreamPlayer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_vkh7x")
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bqp32")

[node name="BlackScreen" type="Panel" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7ee8e")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Emblem" type="TextureRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_t4b0w")
expand_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="2Dlevel" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play 2D Level"

[node name="3Dlevel" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play 3D Level
"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Options
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p1dvj")
}

[connection signal="finished" from="intro_video" to="." method="_on_intro_video_finished"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/2Dlevel" to="." method="_on_2d_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/3Dlevel" to="." method="_on_3d_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
